[package]
name = "stream-kmerge"
version = "0.1.3-alpha.1"

license = "MIT/Apache-2.0"
repository = "https://github.com/tvrg/stream-kmerge"
documentation = "https://docs.rs/stream-kmerge/"
authors = ["Thomas von Rosenberg <thomas@von-rosenberg.eu>"]
readme = "README.md"
description = "K-way merge for streams"
keywords = ["stream", "merge", "sort"]
categories = ["algorithms", "concurrency", "asynchronous"]

edition = "2021"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"
tokio-test = "0.4"
