[package]
name = "stream-kmerge"
version = "0.2.0"

license = "MIT/Apache-2.0"
repository = "https://github.com/tvrg/stream-kmerge"
documentation = "https://docs.rs/stream-kmerge/"
authors = ["Thomas von Rosenberg <thomas@von-rosenberg.eu>"]
readme = "README.md"
description = "K-way merge for streams"
keywords = ["stream", "merge", "sort"]
categories = ["algorithms", "concurrency", "asynchronous"]

edition = "2021"

[dependencies]
binary-heap-plus = "0.4"
compare = "0.1.0"
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
doc-comment = "0.3.3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"
tokio-test = "0.4"
